Latest edition with PH. Smart dates automatically calculated now.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
     "breakpoint-sass": "^2.7.1",
+    "moment": "^2.21.0",
+    "moment-range": "^3.1.1",
     "node-sass": "^4.5.3",
     "node-sass-json-importer": "^3.0.2",
     "sass-loader": "^6.0.6",
