--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
-    "deploy": "node ./node_modules/vue-gh-pages/index.js"
+    "deploy": "npm run build && node ./node_modules/vue-gh-pages/index.js"
   },
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
