--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0-rc.1",
     "@mdi/font": "^2.8.94",
+    "@types/lodash": "^4.14.117",
+    "lodash": "^4.17.11",
     "material-design-icons-iconfont": "^3.0.3",
     "moment": "^2.22.2",
     "moment-range": "^4.0.1",
