--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "resume_vue3",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -13,24 +13,33 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0-rc.1",
     "@mdi/font": "^2.8.94",
+    "@types/js-cookie": "^2.2.0",
     "@types/lodash": "^4.14.117",
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "js-cookie": "^2.2.0",
     "lodash": "^4.17.11",
     "material-design-icons-iconfont": "^3.0.3",
     "moment": "^2.22.2",
     "moment-range": "^4.0.1",
+    "nativescript-vue": "^2.0.2",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "roboto-fontface": "*",
     "rupture": "^0.7.1",
     "style-resources-loader": "^1.2.1",
+    "tslib": "^1.9.3",
     "tslint-config-airbnb": "^5.11.0",
     "vue": "^2.5.17",
     "vue-awesome": "^3.1.3",
-    "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^7.0.0",
+    "vue-class-component": "^6.3.0",
+    "vue-property-decorator": "^7.2.0",
     "vue-router": "^3.0.1",
+    "vue2-collapse": "^1.0.15",
     "vuetify": "^1.2.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-class": "^0.3.1",
+    "vuex-module-decorators": "^0.8.0",
+    "vuex-type-helper": "^1.2.0"
   },
   "devDependencies": {
     "@types/jest": "^23.1.4",
