--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "resume_vue3",
-  "version": "0.2.0",
+  "name": "resume",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -15,6 +15,7 @@
     "@mdi/font": "^2.8.94",
     "@types/js-cookie": "^2.2.0",
     "@types/lodash": "^4.14.117",
+    "@types/moment": "^2.13.0",
     "babel-plugin-transform-decorators": "^6.24.1",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.11",
