--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,6 @@
 root = true
 
-[{src,scripts}/**.{json,js,ts,vue}]
+[{src,scripts}/**.{json,js,styl,ts,vue}]
 end_of_line = crlf
 charset = utf-8
 trim_trailing_whitespace = true
