--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "deploy": "./deploy.sh",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "gen:docs": "./node_modules/.bin/typedoc --json dist/docs.json --mode modules"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0-rc.1",
@@ -17,23 +18,29 @@
     "@types/lodash": "^4.14.117",
     "@types/moment": "^2.13.0",
     "babel-plugin-transform-decorators": "^6.24.1",
+    "dts-gen": "^0.5.7",
+    "gsap": "^2.0.2",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.11",
     "material-design-icons-iconfont": "^3.0.3",
     "moment": "^2.22.2",
     "moment-range": "^4.0.1",
     "nativescript-vue": "^2.0.2",
+    "nib": "^1.1.2",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "roboto-fontface": "*",
     "rupture": "^0.7.1",
     "style-resources-loader": "^1.2.1",
+    "stylus-bem-sugar": "^1.0.2",
     "tslib": "^1.9.3",
     "tslint-config-airbnb": "^5.11.0",
+    "typedoc": "^0.13.0",
     "vue": "^2.5.17",
     "vue-awesome": "^3.1.3",
     "vue-class-component": "^6.3.0",
     "vue-property-decorator": "^7.2.0",
+    "vue-radial-progress": "^0.2.10",
     "vue-router": "^3.0.1",
     "vue2-collapse": "^1.0.15",
     "vuetify": "^1.2.0",
