--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0-rc.1",
     "@mdi/font": "^2.8.94",
+    "@types/gsap": "^1.19.2",
     "@types/js-cookie": "^2.2.0",
     "@types/lodash": "^4.14.117",
     "@types/moment": "^2.13.0",
