--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "tslib": "^1.9.3",
     "tslint-config-airbnb": "^5.11.0",
     "typedoc": "^0.13.0",
+    "typeface-montserrat": "^0.0.54",
     "vue": "^2.5.17",
     "vue-awesome": "^3.1.3",
     "vue-class-component": "^6.3.0",
