--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit",
-    "gen:docs": "./node_modules/.bin/typedoc --json dist/docs.json --mode modules"
+    "gen:docs": "./node_modules/.bin/typedoc --json dist/docs.json --mode modules",
+    "vue:devtools": "vue-devtools"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0-rc.1",
@@ -18,15 +19,19 @@
     "@types/js-cookie": "^2.2.0",
     "@types/lodash": "^4.14.117",
     "@types/moment": "^2.13.0",
+    "@types/node": "^10.12.0",
+    "@vue/devtools": "^4.1.5",
     "babel-plugin-transform-decorators": "^6.24.1",
     "dts-gen": "^0.5.7",
     "gsap": "^2.0.2",
     "js-cookie": "^2.2.0",
+    "localtunnel": "^1.9.1",
     "lodash": "^4.17.11",
     "material-design-icons-iconfont": "^3.0.3",
     "moment": "^2.22.2",
     "moment-range": "^4.0.1",
     "nativescript-vue": "^2.0.2",
+    "ngrok": "^3.1.0",
     "nib": "^1.1.2",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
@@ -39,11 +44,14 @@
     "typedoc": "^0.13.0",
     "typeface-montserrat": "^0.0.54",
     "vue": "^2.5.17",
+    "vue-analytics": "^5.16.0",
     "vue-awesome": "^3.1.3",
     "vue-class-component": "^6.3.0",
+    "vue-meta": "^1.5.5",
     "vue-property-decorator": "^7.2.0",
     "vue-radial-progress": "^0.2.10",
     "vue-router": "^3.0.1",
+    "vue-ua": "^1.5.0",
     "vue2-collapse": "^1.0.15",
     "vuetify": "^1.2.0",
     "vuex": "^3.0.1",
